--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ keywords    = ["cosmos", "tendermint"]
 [dependencies]
 failure = "0.1"
 gumdrop = "0.6"
+home = "0.3"
 lazy_static = "1"
 serde = { version = "1", features = ["serde_derive"] }
+tendermint = { version = "0.9", features = ["rpc"] }
+toml = "0.5"
 
 [dependencies.abscissa_core]
 version = "0.2.0"
