Initial poll loop
Polls a Tendermint node's RPC `/status` endpoint, collecting node info
and chain status, and printing out serialized JSON whenever either of
them change.

Additionally monitors the `/net_info` endpoint, collecting some basic
information about peers and their connectivity, and comparing it against
the configured peer list.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ gumdrop = "0.6"
 home = "0.3"
 lazy_static = "1"
 serde = { version = "1", features = ["serde_derive"] }
-tendermint = { version = "0.10.0-rc0", features = ["config", "rpc"] }
+serde_json = { version = "1" }
+tendermint = { version = "0.10", features = ["config", "rpc"] }
 toml = "0.5"
 
 [dependencies.abscissa_core]
@@ -24,6 +25,3 @@ version = "0.2.0"
 [dev-dependencies.abscissa_core]
 version = "0.2.0"
 features = ["testing"]
-
-[patch.crates-io]
-tendermint = { git = "https://github.com/tendermint/kms" }
