--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
 tendermint = { version = "0.10", features = ["config", "rpc"] }
 toml = "0.5"
+warp = "0.1"
 
 [dependencies.abscissa_core]
 version = "0.2.0"
