--- a/sagan.toml.example
+++ b/sagan.toml.example
@@ -5,3 +5,6 @@ node_home = "/{your-gaiad-home}/cosmoshub-2" # path to e.g. gaiad's --home
 
 [collector]
 listen_addr = "127.0.0.1:31023"
+
+[collector.networks]
+tendermint = ["cosmoshub-2"]
