--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition     = "2018"
 keywords    = ["cosmos", "tendermint"]
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 failure = "0.1"
 gumdrop = "0.6"
 home = "0.3"
