--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: audit
-          args: --deny-warnings
+          args: --deny-warnings --ignore RUSTSEC-2019-0031
 
   check:
     name: Check
