--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ thiserror = "1"
 toml = "0.5"
 warp = "0.1"
 
+[dev-dependencies]
+once_cell = "1"
+
 [dependencies.abscissa_core]
 version = "0.5.0"
 
