--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition     = "2018"
 keywords    = ["cosmos", "tendermint"]
 
 [dependencies]
+abscissa_core = "0.5"
+abscissa_tokio = "0.5"
 gumdrop = "0.7"
 home = "0.5"
 serde = { version = "1", features = ["serde_derive"] }
@@ -22,9 +24,6 @@ warp = "0.1"
 
 [dev-dependencies]
 once_cell = "1"
-
-[dependencies.abscissa_core]
-version = "0.5.2"
 
 [dev-dependencies.abscissa_core]
 version = "0.5.0"
