--- a/sagan.toml.example
+++ b/sagan.toml.example
@@ -8,3 +8,9 @@ listen_addr = "127.0.0.1:31023"
 
 [collector.networks]
 tendermint = ["cosmoshub-2"]
+
+[events]
+query = "tm.event='NewBlock'"
+
+[rpc]
+rpc_addr = "tcp://127.0.0.1:26657"
