Initial support for source of truth hashmaps
Support for the update client event

--- a/sagan.toml.collector.example
+++ b/sagan.toml.collector.example
@@ -3,6 +3,7 @@
 [collector]
 listen_addr = "127.0.0.1:31023"
 statsd ="127.0.0.1"
+prefix ="sagan_testing"
 
 [collector.networks]
 tendermint = ["ibc0"]
