--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tokio = "0.2"
 warp = "0.1"
 futures = "0.3.4"
 cadence = "0.20"
+subtle-encoding = {version = "0.5.1", features=["bech32-preview"]}
 
 [dev-dependencies]
 once_cell = "1"
