--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,26 +7,28 @@ license     = "Apache-2.0"
 repository  = "https://github.com/iqlusioninc/sagan"
 readme      = "README.md"
 edition     = "2018"
+categories  = ["cryptography::cryptocurrencies"]
 keywords    = ["cosmos", "tendermint"]
 
 [dependencies]
-abscissa_core = "0.5"
-abscissa_tokio = "0.5"
+abscissa_core = "0.6.0-pre.1"
+abscissa_tokio = "0.6.0-pre.1"
+futures = "0.3"
 gumdrop = "0.7"
 home = "0.5"
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
-tendermint = "0.16"
-tendermint-rpc = { version = "0.16", features = ["client"] }
-reqwest = "0.10"
+tendermint = "0.19"
+tendermint-rpc = { version = "0.19", features = ["http-client"] }
+reqwest = "0.11"
 thiserror = "1"
 toml = "0.5"
-tokio = "0.2"
-warp = "0.1"
+tokio = "1"
+warp = "0.3"
 
 [dev-dependencies]
 once_cell = "1"
 
 [dev-dependencies.abscissa_core]
-version = "0.5.0"
+version = "0.6.0-pre.1"
 features = ["testing"]
