--- a/sagan.toml.example
+++ b/sagan.toml.example
@@ -3,8 +3,10 @@
 [agent]
 node_home = "/{your-gaiad-home}/cosmoshub-2" # path to e.g. gaiad's --home
 
-[collector]
-listen_addr = "127.0.0.1:31023"
+[collector.listen]
+addr = "127.0.0.1"
+port = 7322
+protocol = "http"
 
 [collector.networks]
 tendermint = ["cosmoshub-2"]
