--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -5,5 +5,6 @@ ignore = [
     "RUSTSEC-2019-0036",
     "RUSTSEC-2020-0016",
     "RUSTSEC-2020-0036",
-    "RUSTSEC-2020-0070"
+    "RUSTSEC-2020-0070",
+    "RUSTSEC-2021-0064",
 ] # advisory IDs to ignore e.g. ["RUSTSEC-2019-0001", ...]
