--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
 tendermint = "0.19"
 tendermint-rpc = { version = "0.19", features = ["http-client"] }
+tower = { version = "0.4", features = ["buffer", "util"] }
 reqwest = "0.11"
 thiserror = "1"
 toml = "0.5"
