--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,21 +16,25 @@ categories = ["cryptography::cryptocurrencies"]
 keywords   = ["cosmos", "tendermint"]
 
 [dependencies]
-abscissa_core = "0.6.0-pre.1"
-abscissa_tokio = "0.6.0-pre.1"
+abscissa_core = "=0.6.0-beta.1"
+abscissa_tokio = "=0.6.0-beta.1"
+clap = "=3.0.0-beta.5"
+chrono = "0.4"
 futures = "0.3"
-gumdrop = "0.7"
+eyre = "0.6"
 home = "0.5"
 iqhttp = { version = "0.1", features = ["serde"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
-tendermint = "0.19"
-tendermint-rpc = { version = "0.19", features = ["http-client"] }
+tendermint = "0.23"
+tendermint-config = "0.23"
+tendermint-rpc = { version = "0.23", features = ["http-client"] }
 tower = { version = "0.4", features = ["buffer", "util"] }
 reqwest = "0.11"
 thiserror = "1"
 toml = "0.5"
 tokio = "1"
+url = "2"
 warp = "0.3"
 
 # optional dependencies
@@ -40,7 +44,7 @@ mintscan = { version = "0.1", optional = true }
 once_cell = "1"
 
 [dev-dependencies.abscissa_core]
-version = "0.6.0-pre.1"
+version = "=0.6.0-beta.1"
 features = ["testing"]
 
 [features]
