--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -6,5 +6,7 @@ ignore = [
     "RUSTSEC-2020-0016",
     "RUSTSEC-2020-0036",
     "RUSTSEC-2020-0070",
+    "RUSTSEC-2020-0071",
+    "RUSTSEC-2020-0159",
     "RUSTSEC-2021-0064",
 ] # advisory IDs to ignore e.g. ["RUSTSEC-2019-0001", ...]
