--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ keywords   = ["cosmos", "tendermint"]
 abscissa_core = "=0.6.0-rc.0"
 abscissa_tokio = "=0.6.0-rc.0"
 clap = "3"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 eyre = "0.6"
 home = "0.5"
