--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sagan"
+name = "cosmon"
 version = "0.0.0"
 description = """
 Observability tool for Cosmos and other Tendermint applications
@@ -9,38 +9,42 @@ authors = [
     "Shella Stephens <shella@iqlusion.io>"
 ]
 license    = "Apache-2.0"
-repository = "https://github.com/iqlusioninc/sagan"
+repository = "https://github.com/iqlusioninc/cosmon"
 readme     = "README.md"
 edition    = "2018"
 categories = ["cryptography::cryptocurrencies"]
 keywords   = ["cosmos", "tendermint"]
 
 [dependencies]
-abscissa_core = "0.6.0-pre.1"
-abscissa_tokio = "0.6.0-pre.1"
+abscissa_core = "=0.6.0-rc.0"
+abscissa_tokio = "=0.6.0-rc.0"
+clap = "3"
+chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
-gumdrop = "0.7"
+eyre = "0.6"
 home = "0.5"
 iqhttp = { version = "0.1", features = ["serde"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
-tendermint = "0.19"
-tendermint-rpc = { version = "0.19", features = ["http-client"] }
+tendermint = "0.23"
+tendermint-config = "0.23"
+tendermint-rpc = { version = "0.23", features = ["http-client"] }
 tower = { version = "0.4", features = ["buffer", "util"] }
 reqwest = "0.11"
 thiserror = "1"
 toml = "0.5"
 tokio = "1"
+url = "2"
 warp = "0.3"
 
 # optional dependencies
-mintscan = { version = "0.1", optional = true }
+mintscan = { version = "0.3", optional = true }
 
 [dev-dependencies]
 once_cell = "1"
 
 [dev-dependencies.abscissa_core]
-version = "0.6.0-pre.1"
+version = "=0.6.0-rc.0"
 features = ["testing"]
 
 [features]
