--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ home = "0.5"
 iqhttp = { version = "0.1", features = ["serde"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
-tendermint = "0.23"
-tendermint-config = "0.23"
-tendermint-rpc = { version = "0.23", features = ["http-client"] }
+tendermint = "=0.23.4"
+tendermint-config = "=0.23.4"
+tendermint-rpc = { version = "=0.23.4", features = ["http-client"] }
 tower = { version = "0.4", features = ["buffer", "util"] }
 reqwest = "0.11"
 thiserror = "1"
