--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ abscissa_core = "=0.6.0-rc.0"
 abscissa_tokio = "=0.6.0-rc.0"
 clap = "3"
 chrono = { version = "0.4", features = ["serde"] }
+datadog = { git = "https://github.com/iqlusioninc/crates" }
 futures = "0.3"
 eyre = "0.6"
+hostname = "0.3"
 home = "0.5"
 iqhttp = { version = "0.1", features = ["serde"] }
 serde = { version = "1", features = ["serde_derive"] }
