--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ categories = ["cryptography::cryptocurrencies"]
 keywords   = ["cosmos", "tendermint"]
 
 [dependencies]
-abscissa_core = "=0.6.0-rc.0"
-abscissa_tokio = "=0.6.0-rc.0"
+abscissa_core = "=0.6.0"
+abscissa_tokio = "=0.6.0"
 clap = "3"
 chrono = { version = "0.4", features = ["serde"] }
 datadog = { git = "https://github.com/iqlusioninc/crates" }
@@ -28,9 +28,9 @@ home = "0.5"
 iqhttp = { version = "0.1", features = ["serde"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
-tendermint = "=0.23.4"
-tendermint-config = "=0.23.4"
-tendermint-rpc = { version = "=0.23.4", features = ["http-client"] }
+tendermint = "=0.23.5"
+tendermint-config = "=0.23.5"
+tendermint-rpc = { version = "=0.23.5", features = ["http-client"] }
 tower = { version = "0.4", features = ["buffer", "util"] }
 reqwest = "0.11"
 thiserror = "1"
@@ -46,7 +46,7 @@ mintscan = { version = "0.3", optional = true }
 once_cell = "1"
 
 [dev-dependencies.abscissa_core]
-version = "=0.6.0-rc.0"
+version = "=0.6.0"
 features = ["testing"]
 
 [features]
