[wip] ngexplorers poller

--- a/cosmon.toml.example
+++ b/cosmon.toml.example
@@ -15,6 +15,11 @@ chain_id = "osmosis-1"
 validator_addr = "osmovaloper1grgelyng2v6v3t8z87wu3sxgt9m5s03x7uy20c"
 mintscan = { host = "api-osmosis.cosmostation.io" }
 
+[[collector.networks.tendermint]]
+chain_id = "agoric"
+validator_addr = "D1CE9A9EF19196DA9BCEA8484791DC6BA28178B0"
+ngexplorers = { host = "agoric.api.explorers.guru" }
+
 [collector.alerting.datadog]
 dd_api_key = "YOUR_APIKEY_HERE"
 alert_threshold = 3
