--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ futures = "0.3"
 eyre = "0.6"
 hostname = "0.3"
 home = "0.5"
-iqhttp = { version = "0.2", features = ["serde"] }
+iqhttp = { version = "0.2", features = ["json"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = { version = "1" }
 tendermint = "=0.23.7"
