--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -9,4 +9,5 @@ ignore = [
     "RUSTSEC-2020-0071",
     "RUSTSEC-2020-0159",
     "RUSTSEC-2021-0064",
+    "RUSTSEC-2021-0139",
 ] # advisory IDs to ignore e.g. ["RUSTSEC-2019-0001", ...]
