--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ url = "2"
 warp = "0.3"
 
 # optional dependencies
-mintscan = { version = "0.4", optional = true }
+mintscan = { git = "https://github.com/iqlusioninc/crates", optional = true }
 
 [dev-dependencies]
 once_cell = "1"
