--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ categories = ["cryptography::cryptocurrencies"]
 keywords   = ["cosmos", "tendermint"]
 
 [dependencies]
-abscissa_core = "=0.7.0"
-abscissa_tokio = "=0.7.0"
+abscissa_core = "0.7"
+abscissa_tokio = "0.7"
 clap = "4"
 chrono = { version = "0.4", features = ["serde"] }
 datadog = { git = "https://github.com/iqlusioninc/crates" }
@@ -46,7 +46,7 @@ mintscan = { git = "https://github.com/iqlusioninc/crates", optional = true }
 once_cell = "1"
 
 [dev-dependencies.abscissa_core]
-version = "=0.6.0"
+version = "0.7"
 features = ["testing"]
 
 [features]
