--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ authors = [
 license    = "Apache-2.0"
 repository = "https://github.com/iqlusioninc/cosmon"
 readme     = "README.md"
-edition    = "2018"
+edition    = "2021"
 categories = ["cryptography::cryptocurrencies"]
 keywords   = ["cosmos", "tendermint"]
 
@@ -39,15 +39,13 @@ tokio = "1"
 url = "2"
 warp = "0.3"
 
-# optional dependencies
-mintscan = { git = "https://github.com/iqlusioninc/crates", optional = true }
+
 
 [dev-dependencies]
 once_cell = "1"
+tokio = { version = "1", features = ["macros"] }
 
 [dev-dependencies.abscissa_core]
 version = "0.7"
 features = ["testing"]
 
-[features]
-default = ["mintscan"]
